updated all files

--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
 
         <div class="dicee-one">
             <h3 class="player1">Player 1</h3>
+            <p class="number1"></p>
             <img class="img1" src="./images/dice1.png" >
         </div>
 
         <div class="dicee-two">
             <h3 class="player2">Player 2</h3>
+            <p class="number2"></p>
              <img class="img2" src="./images/dice5.png" >
         </div>
 
